using reactive model data

--- a/docs/index_30042025.md
+++ b/docs/index_30042025.md
@@ -1286,21 +1286,17 @@ function filterStackedInterventions() {
 
   // filter table and map based on stacked intervention
   // format the IDs as objects with an id property as expected by the table
-  let buildingsArray = stackedRecap ? stackedRecap?.buildings : [];
+  let buildingsArray = stackedRecap?.buildings;
+  let currentIdObject =
+    buildingsArray?.map((building) => ({ id: building.id })) || [];
+  let currentIdList = buildingsArray?.map((building) => building.id) || [];
 
-  // UPDATE MODEL DATA
-  setModelData(buildingsArray);
-
-  // let currentIdObject =
-  //   buildingsArray?.map((building) => ({ id: building.id })) || [];
+  log("current ID for stackedRecap filtering", currentIdList);
+  table.resetTable();
+  table.setFilteredDataById(currentIdList);
+  // mapfiltering accept array
   // let currentIdList = buildingsArray?.map((building) => building.id) || [];
-
-  // log("current ID for stackedRecap filtering", currentIdList);
-  // table.resetTable();
-  // table.setFilteredDataById(currentIdList);
-  // // mapfiltering accept array
-  // // let currentIdList = buildingsArray?.map((building) => building.id) || [];
-  // mapInstance.setFilteredData("buildings", { ids: currentIdList });
+  mapInstance.setFilteredData("buildings", { ids: currentIdList });
 }
 ```
 
@@ -1332,28 +1328,24 @@ function filterSelectedIntervention(index, interventions) {
   let selectedIntervenedBuildings = interventions[index]?.intervenedBuildings;
   // flatData is from a single intervetntion
   // flatten the intervened buildings
-
   let flatData = selectedIntervenedBuildings?.map((p) => ({
     ...p,
     ...p.properties,
   }));
 
-  // UPDATE MODEL DATA
-  setModelData(flatData);
-
   // filter table and map based on stacked intervention
   // format the IDs as objects with an id property as expected by the table
-  // let currentIdObject =
-  //   flatData?.map((building) => ({ id: building.id })) || [];
+  let currentIdObject =
+    flatData?.map((building) => ({ id: building.id })) || [];
+  let currentIdList = flatData?.map((building) => building.id) || [];
+
+  log("currently selected flat data", currentIdList);
+
+  table.resetTable();
+  table.setFilteredDataById(currentIdList);
+  // mapfiltering accept array
   // let currentIdList = flatData?.map((building) => building.id) || [];
-
-  // log("currently selected flat data", currentIdList);
-
-  // table.resetTable();
-  // table.setFilteredDataById(currentIdList);
-  // // mapfiltering accept array
-  // // let currentIdList = flatData?.map((building) => building.id) || [];
-  // mapInstance.setFilteredData("buildings", { ids: currentIdList });
+  mapInstance.setFilteredData("buildings", { ids: currentIdList });
 }
 ```
 
